@@ -1,3 +1,7 @@
+2013-02-26  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Resolves #45862: Enable domain model extension
+
 2013-02-25  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Resolves #45823: Remove hotlist feature
